--- a/src/burnconfigdialog.ui
+++ b/src/burnconfigdialog.ui
@@ -40,6 +40,9 @@
          <property name="whatsThis">
           <string>The location of the AVRDUDE.EXE executable.</string>
          </property>
+         <property name="text">
+          <string notr="true"/>
+         </property>
         </widget>
        </item>
        <item row="0" column="3" rowspan="2">
@@ -71,6 +74,9 @@
           <string>This directory holds temporary files needed for uploading and downloading EEPROM files.   
 
 Make sure you have write access to this directory.</string>
+         </property>
+         <property name="text">
+          <string notr="true"/>
          </property>
         </widget>
        </item>
@@ -105,312 +111,312 @@ Please consult the programmer's documentation and the AVRDUDE documentation to s
          </property>
          <item>
           <property name="text">
-           <string>c2n232i</string>
+           <string notr="true">c2n232i</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>dasa3</string>
+           <string notr="true">dasa3</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>dasa</string>
+           <string notr="true">dasa</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>siprog</string>
+           <string notr="true">siprog</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>ponyser</string>
+           <string notr="true">ponyser</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>89isp</string>
+           <string notr="true">89isp</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>frank-stk200</string>
+           <string notr="true">frank-stk200</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>blaster</string>
+           <string notr="true">blaster</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>ere-isp-avr</string>
+           <string notr="true">ere-isp-avr</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>atisp</string>
+           <string notr="true">atisp</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>dapa</string>
+           <string notr="true">dapa</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>xil</string>
+           <string notr="true">xil</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>futurlec</string>
+           <string notr="true">futurlec</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>abcmini</string>
+           <string notr="true">abcmini</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>picoweb</string>
+           <string notr="true">picoweb</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>sp12</string>
+           <string notr="true">sp12</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>alf</string>
+           <string notr="true">alf</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>bascom</string>
+           <string notr="true">bascom</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>dt006</string>
+           <string notr="true">dt006</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>pony-stk200</string>
+           <string notr="true">pony-stk200</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>stk200</string>
+           <string notr="true">stk200</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>bsd</string>
+           <string notr="true">bsd</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>pavr</string>
+           <string notr="true">pavr</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>dragon_pdi</string>
+           <string notr="true">dragon_pdi</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>dragon_dw</string>
+           <string notr="true">dragon_dw</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>dragon_hvsp</string>
+           <string notr="true">dragon_hvsp</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>dragon_pp</string>
+           <string notr="true">dragon_pp</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>dragon_isp</string>
+           <string notr="true">dragon_isp</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>dragon_jtag</string>
+           <string notr="true">dragon_jtag</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>jtag2pdi</string>
+           <string notr="true">jtag2pdi</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>jtag2avr32</string>
+           <string notr="true">jtag2avr32</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>jtagmkII_avr32</string>
+           <string notr="true">jtagmkII_avr32</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>jtag2dw</string>
+           <string notr="true">jtag2dw</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>jtag2isp</string>
+           <string notr="true">jtag2isp</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>jtag2</string>
+           <string notr="true">jtag2</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>jtag2fast</string>
+           <string notr="true">jtag2fast</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>jtag2slow</string>
+           <string notr="true">jtag2slow</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>jtagmkII</string>
+           <string notr="true">jtagmkII</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>jtag1slow</string>
+           <string notr="true">jtag1slow</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>jtag1</string>
+           <string notr="true">jtag1</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>jtagmkI</string>
+           <string notr="true">jtagmkI</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>avr911</string>
+           <string notr="true">avr911</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>avr109</string>
+           <string notr="true">avr109</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>butterfly</string>
+           <string notr="true">butterfly</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>usbtiny</string>
+           <string notr="true">usbtiny</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>usbasp</string>
+           <string notr="true">usbasp</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>avr910</string>
+           <string notr="true">avr910</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>stk600hvsp</string>
+           <string notr="true">stk600hvsp</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>stk600pp</string>
+           <string notr="true">stk600pp</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>stk600</string>
+           <string notr="true">stk600</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>stk500hvsp</string>
+           <string notr="true">stk500hvsp</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>stk500pp</string>
+           <string notr="true">stk500pp</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>stk500v2</string>
+           <string notr="true">stk500v2</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>mib510</string>
+           <string notr="true">mib510</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>stk500v1</string>
+           <string notr="true">stk500v1</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>stk500</string>
+           <string notr="true">stk500</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>buspirate</string>
+           <string notr="true">buspirate</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>avrisp2</string>
+           <string notr="true">avrisp2</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>avrispmkII</string>
+           <string notr="true">avrispmkII</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>avrispv2</string>
+           <string notr="true">avrispv2</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>avrisp</string>
+           <string notr="true">avrisp</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>arduino</string>
+           <string notr="true">arduino</string>
           </property>
          </item>
         </widget>
@@ -435,6 +441,9 @@ Please consult the programmer's documentation and the AVRDUDE documentation to s
 This can be used for providing extra information to AVRDUDE.
 
 Please only use this if you know what you are doing.  There are no error checks and you could cripple your controller.</string>
+         </property>
+         <property name="text">
+          <string notr="true"/>
          </property>
         </widget>
        </item>
@@ -466,52 +475,52 @@ Please only use this if you know what you are doing.  There are no error checks 
          </property>
          <item>
           <property name="text">
-           <string/>
+           <string notr="true"/>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>usb</string>
+           <string notr="true">usb</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>com1</string>
+           <string notr="true">com1</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>com2</string>
+           <string notr="true">com2</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>com3</string>
+           <string notr="true">com3</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>com4</string>
+           <string notr="true">com4</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>lpt1</string>
+           <string notr="true">lpt1</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>lpt2</string>
+           <string notr="true">lpt2</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>lpt3</string>
+           <string notr="true">lpt3</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>lpt4</string>
+           <string notr="true">lpt4</string>
           </property>
          </item>
         </widget>
