--- a/src/modeledit.ui
+++ b/src/modeledit.ui
@@ -24,7 +24,7 @@
    <item row="2" column="1">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>5</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tabModelSetup">
       <attribute name="title">
@@ -259,27 +259,27 @@
         <widget class="QComboBox" name="protocolCB">
          <item>
           <property name="text">
-           <string>PPM</string>
+           <string notr="true">PPM</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>Silver A</string>
+           <string notr="true">Silver A</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>Silver B</string>
+           <string notr="true">Silver B</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>Silver C</string>
+           <string notr="true">Silver C</string>
           </property>
          </item>
          <item>
           <property name="text">
-           <string>Trac 09</string>
+           <string notr="true">Trac 09</string>
           </property>
          </item>
         </widget>
@@ -4453,33 +4453,7 @@ Right</string>
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QComboBox" name="cswitchFunc_1">
-         <item>
-          <property name="text">
-           <string>----</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>v&gt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>v&lt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>|v|&gt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>|v|&lt;ofs</string>
-          </property>
-         </item>
-        </widget>
+        <widget class="QComboBox" name="cswitchFunc_1"/>
        </item>
        <item row="1" column="2">
         <widget class="QComboBox" name="cswitchCB_1"/>
@@ -4517,33 +4491,7 @@ Right</string>
         </widget>
        </item>
        <item row="2" column="1">
-        <widget class="QComboBox" name="cswitchFunc_2">
-         <item>
-          <property name="text">
-           <string>----</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>v&gt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>v&lt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>|v|&gt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>|v|&lt;ofs</string>
-          </property>
-         </item>
-        </widget>
+        <widget class="QComboBox" name="cswitchFunc_2"/>
        </item>
        <item row="2" column="2">
         <widget class="QComboBox" name="cswitchCB_2"/>
@@ -4581,33 +4529,7 @@ Right</string>
         </widget>
        </item>
        <item row="3" column="1">
-        <widget class="QComboBox" name="cswitchFunc_3">
-         <item>
-          <property name="text">
-           <string>----</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>v&gt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>v&lt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>|v|&gt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>|v|&lt;ofs</string>
-          </property>
-         </item>
-        </widget>
+        <widget class="QComboBox" name="cswitchFunc_3"/>
        </item>
        <item row="3" column="2">
         <widget class="QComboBox" name="cswitchCB_3"/>
@@ -4645,33 +4567,7 @@ Right</string>
         </widget>
        </item>
        <item row="4" column="1">
-        <widget class="QComboBox" name="cswitchFunc_4">
-         <item>
-          <property name="text">
-           <string>----</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>v&gt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>v&lt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>|v|&gt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>|v|&lt;ofs</string>
-          </property>
-         </item>
-        </widget>
+        <widget class="QComboBox" name="cswitchFunc_4"/>
        </item>
        <item row="4" column="2">
         <widget class="QComboBox" name="cswitchCB_4"/>
@@ -4709,33 +4605,7 @@ Right</string>
         </widget>
        </item>
        <item row="5" column="1">
-        <widget class="QComboBox" name="cswitchFunc_5">
-         <item>
-          <property name="text">
-           <string>----</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>v&gt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>v&lt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>|v|&gt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>|v|&lt;ofs</string>
-          </property>
-         </item>
-        </widget>
+        <widget class="QComboBox" name="cswitchFunc_5"/>
        </item>
        <item row="5" column="2">
         <widget class="QComboBox" name="cswitchCB_5"/>
@@ -4773,33 +4643,7 @@ Right</string>
         </widget>
        </item>
        <item row="6" column="1">
-        <widget class="QComboBox" name="cswitchFunc_6">
-         <item>
-          <property name="text">
-           <string>----</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>v&gt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>v&lt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>|v|&gt;ofs</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>|v|&lt;ofs</string>
-          </property>
-         </item>
-        </widget>
+        <widget class="QComboBox" name="cswitchFunc_6"/>
        </item>
        <item row="6" column="2">
         <widget class="QComboBox" name="cswitchCB_6"/>
