--- a/src/burnconfigdialog.ui
+++ b/src/burnconfigdialog.ui
@@ -35,7 +35,7 @@
        <item row="0" column="1">
         <widget class="QLineEdit" name="avrdude_location">
          <property name="toolTip">
-          <string>Locatioon of AVRDUDE executable</string>
+          <string>Location of AVRDUDE executable</string>
          </property>
          <property name="whatsThis">
           <string>The location of the AVRDUDE.EXE executable.</string>
